--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,6 +7,10 @@ jobs:
     steps:
       - name: step1 # 각 스텝의 이름 지정.
         run : echo hello world # 쉘 명령어 실행.
+      - name : step2
+        run : |
+          echo "This is step 2"
+          echo "Multiple lines in a single step"
       #   uses: actions/checkout@v2 # Github Action에서 제공하는 액션 사용.
         
       # - name: Set up Node.js # Node.js 설정
