--- a/.github/workflows/part1/issue.yaml
+++ b/.github/workflows/part1/issue.yaml
@@ -13,3 +13,6 @@ jobs:
         run : |
           echo "This is step 2 of issue workflow"
           echo "Multiple lines in a single step"
+
+# - 버그, 기능 요청, 질문, 논의 등 추척 및 관리
+# - 프로젝트의 버그나 기능 개발 등의 진행 상황 파악
