--- a/.github/workflows/part1/workflow_dispatch.yaml
+++ b/.github/workflows/part1/workflow_dispatch.yaml
@@ -32,3 +32,7 @@ jobs:
         run : |
           echo ${{inputs.name}}
           echo ${{inputs.environment}}
+
+# - 수동으로 트리거
+# - default branch 에서만 동작
+# - 인풋 값 넣을 수 있음..
