--- a/.github/workflows/context.yaml
+++ b/.github/workflows/context.yaml
@@ -7,7 +7,13 @@ jobs:
     steps:
       - name: github context
         run: echo '${{tojson(github)}}'
-      
+      - name : check github context
+        run: |
+          echo "Repository: ${{ github.repository }}"
+          echo "Event Name: ${{ github.event_name }}"
+          echo "SHA: ${{ github.sha }}"
+          echo "Ref: ${{ github.ref }}"
+          echo "Actor: ${{ github.actor }}"
 
 # - context
 #     - 워크플로우를 실행하는 환경에 대한 정보
