--- a/.github/workflows/artifact.yaml
+++ b/.github/workflows/artifact.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: artifact-name
-          paths: ./hello.txt
+          path: ./hello.txt
 
   download-artifact:
     runs-on: ubuntu-latest
