--- a/.github/workflows/output.yaml
+++ b/.github/workflows/output.yaml
@@ -4,6 +4,8 @@ on: push
 jobs:
   create-output:
     runs-on: ubuntu-latest
+    outputs:
+      test: ${{ steps.check-output.outputs.test }}
     steps:
       - name: echo output
         id: check-output
@@ -12,6 +14,16 @@ jobs:
       - name : check output
         run: |
           echo ${{ steps.check-output.outputs.test }}
+
+  get-output:
+    needs: [create-output]
+    runs-on: ubuntu-latest
+    steps:
+      - name: get output
+        run: |
+          echo "Greeting from previous job: ${{ needs.create-output.outputs.test }}"
+          
+
 
 
     # outputs:
