--- a/.github/workflows/part2/secrets.yaml
+++ b/.github/workflows/part2/secrets.yaml
@@ -23,3 +23,5 @@ jobs:
 # - 정의된 시크릿을 바꾸면 워크플로우 결과 달라질 수 있음
 # - ${{secrests.<secret-name}}
 # - ${{secrets.LEVEL}}
+
+# 다만 보통, 내 경우는 Azure 쪽 서비스를 사용하기 때문에 secrets 보다는 Azure Key Vault 를 더 많이 사용한다. 많이 사용하지 않을 듯.
