--- a/.github/workflows/if-1.yaml
+++ b/.github/workflows/if-1.yaml
@@ -12,7 +12,7 @@ jobs:
       run: echo ${{github.event_name}}
   job2:
     runs-on: ubuntu-latest
-    if: github.event_name != ‘push’
+    if: github.event_name != 'push'
     steps:
     - name: get event name
       run: echo ${{github.event_name}}
