--- a/.github/workflows/if-2.yaml
+++ b/.github/workflows/if-2.yaml
@@ -12,6 +12,7 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: [job1]
+    if: always()  # job1의 성공 여부와 상관없이 항상 실행
     steps:
       - name: echo
         run: echo hello
