--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -24,5 +24,5 @@ jobs:
         echo ${{ secrets.PERSONAL_ACCESS_TOKEN }} | gh auth login --with-token
     - name: create repo
       run: |
-        gh repo create jaeyeon-actions/${{ inputs.prefix }}-${{ inputs.nam }} --public --add-readme
+        gh repo create jaeyeon-action-dev/${{ inputs.prefix }}-${{ inputs.nam }} --public --add-readme
         
