--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -31,6 +31,8 @@ jobs:
       if: always()
       uses: slackapi/slack-github-action@v1.24.0
       with:
+        # webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+        # webhook-type: INCOMING_WEBHOOK
         payload: |
           {
             "attachments": [
@@ -41,7 +43,7 @@ jobs:
                   {
                     "title": "create repo result ${{steps.create-repo.outcome}}",
                     "short": true
-                    "value": "${{ inputs.prefix }}-${{ inputs.nam }}",
+                    "value": "${{ inputs.prefix }}-${{ inputs.name }}",
                   }
                 ]
               }
