create repo test v2

--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -42,8 +42,8 @@ jobs:
                 "fields": [
                   {
                     "title": "create repo result ${{steps.create-repo.outcome}}",
-                    "short": true
-                    "value": "${{ inputs.prefix }}-${{ inputs.name }}",
+                    "short": true,
+                    "value": "${{ inputs.prefix }}-${{ inputs.name }}"
                   }
                 ]
               }
