issue notify commit

--- a/.github/workflows/issue-notify.yaml
+++ b/.github/workflows/issue-notify.yaml
@@ -23,6 +23,6 @@ jobs:
             fi
           done
       - name: get output
-        run: echo ${{ steps.get-keyword.outputs.level }}"
+        run: echo ${{ steps.get-keyword.outputs.level }}
 
      
