--- a/.github/workflows/issue-notify.yaml
+++ b/.github/workflows/issue-notify.yaml
@@ -33,22 +33,23 @@ jobs:
     steps:
       - name: slack
         uses: slackapi/slack-github-action@v1.24.0
-        payload: |
-          {
-            "attachments": [
-              {
-                "pretext": "issue alert message",
-                "color": "28a745",
-                "fields": [
-                  {
-                    "title": "Level : ${{needs.get-keyword.outputs.level}}",
-                    "short": true,
-                    "value": "issue url : ${{github.event.issue.html_url}}"
-                  }
-                ]
-              }
-            ]
-          }
+        with:
+          payload: |
+            {
+              "attachments": [
+                {
+                  "pretext": "issue alert message",
+                  "color": "28a745",
+                  "fields": [
+                    {
+                      "title": "Level : ${{needs.get-keyword.outputs.level}}",
+                      "short": true,
+                      "value": "issue url : ${{github.event.issue.html_url}}"
+                    }
+                  ]
+                }
+              ]
+            }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
