--- a/.github/workflows/issue-notify.yaml
+++ b/.github/workflows/issue-notify.yaml
@@ -29,6 +29,10 @@ jobs:
     needs: [get-keyword]
     if: needs.get-keyword.outputs.level != 'Undefined'
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        environment: ["${{needs.get-keyword.outputs.level}}"]
+      environment: ${{matrix.environment}}
     environment: ${{needs.get-keyword.outputs.level}}
     steps:
       - name: slack
