--- a/.github/workflows/issue-notify.yaml
+++ b/.github/workflows/issue-notify.yaml
@@ -32,8 +32,8 @@ jobs:
     strategy:
       matrix:
         environment: ["${{needs.get-keyword.outputs.level}}"]
-      environment: ${{matrix.environment}}
-    environment: ${{needs.get-keyword.outputs.level}}
+    environment: ${{matrix.environment}}
+    # environment: ${{needs.get-keyword.outputs.level}}
     steps:
       - name: slack
         uses: slackapi/slack-github-action@v1.24.0
