--- a/.github/workflows/cicd-2.yaml
+++ b/.github/workflows/cicd-2.yaml
@@ -45,7 +45,7 @@ jobs:
           echo ${{github.base_ref}}
           echo "environment=dev" >> $GITHUB_OUTPUT
 
-          if [[ ${github.base_ref} == "master" ]]; then
+          if [[ ${{github.base_ref}} == "master" ]]; then
             echo "environment=prod" >> $GITHUB_OUTPUT
           fi
       - name: check env
